<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:id="@+id/home_screen"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:background="@drawable/splash_background">

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/election"
        android:id="@+id/titleFirst"
        android:textSize="36sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_above="@id/separator"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/make_decision"
        android:id="@+id/titleSecond"
        android:textSize="28sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_below="@id/separator"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/white"

        android:text="@string/click_to_start"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/start_btn" />
</RelativeLayout>
