<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Czy jestes za aborcja?"
        android:gravity="center"
        android:textSize="34sp"
        android:layout_weight="2"/>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="match_parent"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="2"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
            android:id="@+id/questions_yes"
                android:layout_weight="1"
                android:textColor="@color/green"
                android:text="@string/yes"
            android:layout_width="wrap_content"
                android:textSize="30sp"
            android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_weight="1"
                android:text="@string/skip"
                android:gravity="center_horizontal"
                android:id="@+id/questions_skip"
                android:layout_width="wrap_content"
                android:textColor="@color/skip_gray"
                android:textSize="24sp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/no"
                android:id="@+id/questions_no"
                android:textSize="30sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
    </RelativeLayout>
</LinearLayout>